add predict API
