# server-src/api/swagger.yaml
@@ -42,6 +42,11 @@ paths:
         type: file
         required: false
         description: The file to upload.
+      - in: formData
+        name: predictionData
+        type: file
+        required: false
+        description: The file to upload.
       responses:
         "201":
           description: "Created"
@@ -165,6 +170,40 @@ paths:
         - "write:models"
         - "read:models"
       x-swagger-router-controller: "Models"
+  /predicting:
+    post:
+      tags:
+      - "models"
+      summary: "predict against a model"
+      description: ""
+      operationId: "predictModel"
+      consumes:
+      - "application/json"
+      - "application/xml"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Model object that needs to be predicted"
+        required: true
+        schema:
+          $ref: "#/definitions/Model"
+      responses:
+        "200":
+          description: "Ok"
+        "400":
+          description: "Bad Request"
+        "401":
+          description: "Unauthorized"
+        "404":
+          description: "Not Found"
+      security:
+      - user_auth:
+        - "write:models"
+        - "read:models"
+      x-swagger-router-controller: "Models"      
   /models/{modelId}:
     get:
       tags:
@@ -461,3 +500,6 @@ definitions:
       classificationData:
         type: "string"
         description: "Model's classification data file's name"
+      predictionData:
+        type: "string"
+        description: "Model's prediction data file's name"      
